# componentsystem

./: CMakeLists.txt  README.md
assets/: architecture.afdesign
include/: Component  ComponentDetailsDialog  ComponentLoader  ComponentViewerDialog  IComponent  IComponentManager  IInterface
includes/: ComponentLoader.h
includes/ComponentSystem/: Component.h  ComponentDetailsDialog.h  ComponentLoader.h  ComponentSystemSpec.h  ComponentViewerDialog.h  IComponent.h  IComponentManager.h  IInterface.h
src/: Component.cpp  Component.h  ComponentDetailsDialog.cpp  ComponentDetailsDialog.h  ComponentDetailsDialog.ui  ComponentLoader.cpp  ComponentLoader.h  ComponentSystemFontAwesome.cpp  ComponentSystemFontAwesome.h  ComponentSystemFontAwesome.qrc  ComponentSystemSpec.h  ComponentViewerDialog.cpp  ComponentViewerDialog.h  ComponentViewerDialog.ui  FontAwesome.cpp  FontAwesome.h  IComponent.cpp  IComponent.h  IComponentManager.cpp  IComponentManager.h  IInterface.h
